--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Game Mata Mosquito">
     <meta property="og:description" content="Jogue agora!!!">
-    <meta property="og:image" content="https://app-mata-mosquito-tawny.vercel.app/imagens/game.png">
+    <meta property="og:image" content="https://app-mata-mosquito-tawny.vercel.app/imagens/logo.png">
 
     <title>Jogo Mata Mosquito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
