--- a/game_over.html
+++ b/game_over.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="d-flex justify-content-center">
-                <img src="./imagens/game_over.png" alt="">
+                <img src="./imagens/game_over.png" class="img-fluid" alt="">
             </div>
         </div>
 
