--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="row">
             <div class="d-flex justify-content-center">
-                <img src="./imagens/game.png" alt="">
+                <img src="./imagens/game.png" class="img-fluid" alt="">
             </div>
         </div>
 
