--- a/vitoria.html
+++ b/vitoria.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="d-flex justify-content-center">
-                <img src="./imagens/vitoria.png" alt="">
+                <img src="./imagens/vitoria.png" class="img-fluid" alt="">
             </div>
         </div>
 
